fix: try to delete scrollbar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,18 +1,15 @@
 .global_wrapp {
   padding: 2% 10%;
   margin: 0 auto;
-  width: 100vw;
-  max-width: 1440px;
-  min-width: 320px;
   box-sizing: border-box;
 }
 body {
   background-color: #363636;
   user-select: none;
   background-image: url("./components/common/img/backgr.png");
-  background-size: 100vw auto;
+  background-size: 100% auto;
   background-repeat: repeat-y;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background-position: start center;
   transition: all 0.5s ease;
 }
