--- a/src/components/GameSteps/GameSteps.module.css
+++ b/src/components/GameSteps/GameSteps.module.css
@@ -72,7 +72,7 @@
   animation: pulse 2s ease-in-out infinite;
   height: 130px;
 }
-svg {
+.svg {
   position: absolute;
   z-index: 20;
   width: 100%;
